--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,3 +6,9 @@ akka.http.server.idle-timeout = infinite
 akka.http.client.idle-timeout = infinite
 akka.http.http-connection-pool.idle-timeout = infinite
 akka.http.htstp-connection-pool.client.idle-timeout = infinite
+
+bamboo {
+  url = ""
+  username = ""
+  password = ""
+}
