create module structure

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,6 +7,8 @@ akka.http.client.idle-timeout = infinite
 akka.http.http-connection-pool.idle-timeout = infinite
 akka.http.htstp-connection-pool.client.idle-timeout = infinite
 
+modules = ["bamboo"]
+
 bamboo {
   url = ""
   username = ""
